--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
+@import "leaflet/dist/leaflet.css";
+@import "styles/Footer.css";
+@import "styles/Map.css";
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
