--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -1,86 +1,148 @@
 .modal {
-}
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: $modal-bg;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  z-index: 1;
 
-.modal {
-  &__backdrop {
-    @apply fixed bg-gray-500 bg-opacity-75 transition-opacity;
-    inset: 65px 0;
+  &--debug {
+    z-index: 100;
   }
 
-  &__container {
-    @apply fixed overflow-y-hidden;
-    @apply flex items-center justify-center px-4 text-center;
-    inset: 65px 0;
-    overflow: hidden;
-    z-index: 1;
+  &--location {
+    z-index: 2;
+  }
+
+  &--weather {
+    z-index: 3;
+  }
+
+  &--route {
+    z-index: 4;
   }
 
   &__wrapper {
-    @apply inline-block align-bottom bg-white rounded-lg text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full;
+    background-color: white;
+    border-radius: $border-radius-md;
+    width: 90%;
+    max-width: 500px;
+    margin-top: 85px;
+
+    input {
+      padding: $spacing-sm;
+      font-size: $font-size-sm;
+      border: 1px solid #ccc;
+      border-radius: $border-radius-sm;
+    }
   }
 
   &__header {
-    @apply bg-white px-4 pt-5 pb-4 sm:p-6 sm:pb-4;
-    @apply sm:flex sm:items-start;
-  }
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: $spacing-sm;
+    background: $secondary-color;
+    padding: $spacing-md;
+    text-align: center;
+    border-radius: $border-radius-md $border-radius-md 0 0;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 
-  &__icon-container {
-    @apply mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full sm:mx-0 sm:h-10 sm:w-10;
-  }
+    &--success {
+      @apply bg-green-100;
+    }
 
-  &__content {
-    @apply mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left;
+    &--danger {
+      @apply bg-rose-400;
+    }
+
+    &--information, &--default {
+      color: $secondary-color;
+    }
+
+    &--fail {
+      @apply bg-yellow-100;
+    }
   }
 
   &__headline {
-    @apply text-lg leading-6 font-medium text-gray-900;
+    color: white;
+    font-size: $font-size-md;
+    font-weight: bold;
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    gap: $spacing-md;
+    padding: $spacing-md;
   }
 
   &__text {
-    @apply mt-2 text-sm text-gray-500;
-  }
-
-  &__footer {
-    @apply bg-gray-50 px-4 py-3 sm:px-6 sm:flex sm:flex-row-reverse;
+    color: black;
   }
 
   &__button {
-    @apply w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-blue-600 hover:bg-blue-700 focus:ring-blue-500 text-base font-medium text-white focus:outline-none focus:ring-2 focus:ring-offset-2 sm:ml-3 sm:w-auto sm:text-sm;
+    padding: $spacing-sm $spacing-md;
+    color: white;
+    border: none;
+    border-radius: $border-radius-sm;
+    cursor: pointer;
+    font-size: $font-size-sm;
+    text-align: center;
+    width: 100%;
+
+    &--cancel {
+      @apply bg-rose-600;
+
+      &:hover {
+        @apply bg-rose-700;
+      }
+    }
+
+    &--submit {
+      @apply bg-blue-600;
+
+      &:hover {
+        @apply bg-blue-700;
+      }
+    }
+  }
+
+  &__button-container {
+    display: flex;
+    gap: $spacing-sm;
+  }
+
+  &__icon-container {
+    @apply flex-shrink-0 rounded-full flex items-center justify-center;
+    height: $icon-size-md;
+    width: $icon-size-md;
+    background-color: $secondary-color;
   }
 
   &__icon {
-    @apply h-6 w-6;
+    font-size: $icon-size-sm;
   }
 
   &__icon--success {
-    @apply text-green-600;
+    @apply text-green-100;
   }
 
   &__icon--danger {
-    @apply text-red-600;
+    @apply text-rose-400;
   }
 
   &__icon--information {
-    @apply text-blue-600;
+    color: white;
   }
 
   &__icon--fail {
-    @apply text-yellow-600;
-  }
-
-  &__bg--success {
-    @apply bg-green-100;
-  }
-
-  &__bg--danger {
-    @apply bg-red-100;
-  }
-
-  &__bg--information {
-    @apply bg-blue-100;
-  }
-
-  &__bg--fail {
-    @apply bg-yellow-100;
+    @apply text-yellow-100;
   }
 }
+
