--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,9 @@
 $icon-size-xs: 18px;
 $icon-size-sm: 25px;
-$icon-size-md: 40px;
+$icon-size-md: 30px;
+$icon-size-lg: 40px;
+$icon-size-xl: 50px;
+$icon-size-xxl: 60px;
 
 $font-size-sm: 16px;
 $font-size-md: 20px;
@@ -14,8 +17,8 @@ $border-radius-md: 10px;
 $toolbar-height: 65px;
 $toolbar-offset: 85px;
 
-$secondary-color: #1f2937;
+$secondary-color: #182746;
 $primary-color: #2563eb;
 $primary-hover-color: #1d4ed8;
 $white-light: #ddd;
-$overlay-bg: rgba(0, 0, 0, 0.5);
+$modal-bg: rgba(0, 0, 0, 0.5);
