--- a/src/styles/Map.scss
+++ b/src/styles/Map.scss
@@ -9,9 +9,9 @@
     &__center-button {
         position: absolute;
         bottom: $spacing-md;
-        right: $spacing-md;
-        width: $icon-size-md;
-        height: $icon-size-md;
+        right: 5%;
+        width: $icon-size-xl;
+        height: $icon-size-xl;
         background-color: $primary-color;
         border-radius: 50%;
         box-shadow: 0 2px 10px rgba(0,0,0,0.2);
