--- a/src/styles/Settings.scss
+++ b/src/styles/Settings.scss
@@ -1,5 +1,28 @@
 .settings {
     margin-bottom: $toolbar-offset - $toolbar-height;
+
+    &__input {
+        width: 100%;
+        padding: 0.75rem;
+        border: 2px solid #e2e8f0;
+        border-radius: 0.5rem;
+        box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+        transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+        color: black;
+
+        &:focus {
+            border-color: #3b82f6;
+            box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.15);
+        }
+
+        &:focus-visible {
+            outline: none;
+        }
+    }
+
+    &__label {
+        @apply block max-w-80 text-gray-700 text-sm font-bold mb-2;
+    }
 }
 
 
