--- a/src/styles/Loading.scss
+++ b/src/styles/Loading.scss
@@ -2,6 +2,12 @@
 
 .loading-screen {
   overflow: hidden;
+  z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: white;
 
   .logo-container {
     position: relative;
