--- a/src/styles/Settings.scss
+++ b/src/styles/Settings.scss
@@ -18,10 +18,26 @@
         &:focus-visible {
             outline: none;
         }
+
+        &-clear {
+            position: absolute;
+            top: 37px;
+            right: 10px;
+            font-size: $icon-size-sm;
+            color: $primary-color;
+        }
     }
 
     &__label {
-        @apply block max-w-80 text-gray-700 text-sm font-bold mb-2;
+        display: flex;
+        align-items: center;
+        gap: $spacing-sm;
+        @apply max-w-80 text-gray-700 text-sm font-bold mb-2;
+
+        &-wrapper {
+            display: flex;
+            gap: $spacing-sm;
+        }
     }
 }
 
@@ -29,7 +45,7 @@
 .switch {
     position: relative;
     display: inline-block;
-    width: 46px;
+    width: calc($icon-size-sm * 2);
     height: $icon-size-sm;
 
     input {
@@ -51,10 +67,10 @@
         &::before {
             position: absolute;
             content: "";
-            height: 20px;
-            width: 20px;
-            left: 3px;
-            bottom: 3px;
+            height: 18px;
+            width: 18px;
+            left: 2px;
+            bottom: 2px;
             background-color: white;
             transition: 0.4s;
         }
@@ -72,7 +88,7 @@
         background-color: rgb(37, 99, 235);
 
         &::before {
-            transform: translateX(20px);
+            transform: translateX($icon-size-sm);
         }
     }
 
@@ -91,8 +107,6 @@
         border-radius: 5px;
         background: #d3d3d3;
         outline: none;
-        opacity: 0.7;
-        transition: opacity 0.2s;
 
         &:hover {
             opacity: 1;
