--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,15 +1,21 @@
 $icon-size-xs: 18px;
-$icon-size-sm: 25px;
+$icon-size-sm: 22px;
 $icon-size-md: 30px;
 $icon-size-lg: 40px;
 $icon-size-xl: 50px;
 $icon-size-xxl: 60px;
 
+$font-size-xs: 12px;
 $font-size-sm: 16px;
 $font-size-md: 20px;
+$font-size-lg: 24px;
 
+$spacing-xs: 4px;
 $spacing-sm: 8px;
 $spacing-md: 16px;
+$spacing-lg: 24px;
+$spacing-xl: 32px;
+$spacing-xxl: 40px;
 
 $border-radius-sm: 5px;
 $border-radius-md: 10px;
@@ -20,5 +26,7 @@ $toolbar-offset: 85px;
 $secondary-color: #182746;
 $primary-color: #2563eb;
 $primary-hover-color: #1d4ed8;
+$accent-color: rgb(59 130 246);
 $white-light: #ddd;
 $modal-bg: rgba(0, 0, 0, 0.5);
+$gray: rgb(75 85 99);
