--- a/src/styles/Modal.scss
+++ b/src/styles/Modal.scss
@@ -75,15 +75,15 @@
   &__headline {
     color: white;
     font-size: $font-size-md;
-    font-weight: bold;
     text-align: left;
   }
 
   &__content {
     display: flex;
     flex-direction: column;
-    gap: $spacing-md;
+    gap: $spacing-lg;
     padding: $spacing-md;
+    height: 100%;
     max-height: 55vh;
     overflow-y: auto;
   }
@@ -195,6 +195,18 @@
     text-align: center;
     color: gray;
     font-size: $font-size-sm;
+  }
+}
+
+.address-suggestions {
+  background: $secondary-color;
+  color: white;
+  padding: 8px;
+  border-radius: 10px;
+  margin-top: 8px;
+
+  li {
+    padding: $spacing-xs;
   }
 }
 
