--- a/src/styles/Settings.scss
+++ b/src/styles/Settings.scss
@@ -32,7 +32,8 @@
         display: flex;
         align-items: center;
         gap: $spacing-sm;
-        @apply max-w-80 text-gray-700 text-sm font-bold mb-2;
+        margin-bottom: $spacing-sm;
+        @apply max-w-80 text-gray-700 text-sm font-bold;
 
         &-wrapper {
             display: flex;
